--- a/src/table_template.html
+++ b/src/table_template.html
@@ -3,10 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>The Known Sizes of Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" href="table.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
+  <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
+  <link rel="canonical" href="https://www.mggg.org/table.html">
+  <title>The Known Sizes of Grid Metagraphs - Metric Geometry and Gerrymandering Group</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="static/table.css" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Source+Sans+Pro:300,400"
+    rel="stylesheet">
 </head>
 
 <body>
