--- a/table.html
+++ b/table.html
@@ -30,6 +30,7 @@
    -->
     <div class="table-container">
       <table>
+
         <colgroup class="row-labels"></colgroup>
         <colgroup class="rook" span="5"></colgroup>
         <colgroup class="queen" span="5">
@@ -37,8 +38,8 @@
         <thead>
           <tr>
             <th></th>
-            <th colspan="5" scope="colgroup" class="rook-heading">Rook &#9814;</th>
-            <th colspan="5" scope="colgroup" class="queen-heading">Queen &#9813;</th>
+            <th colspan="5" scope="colgroup" class="rook-heading">Rook</th>
+            <th colspan="5" scope="colgroup" class="queen-heading">Queen</th>
           </tr>
           <tr>
             <th></th>
@@ -102,38 +103,38 @@
           </tr>
           <tr>
             <th>4x4 &rarr; 4</th>
-            <td class="clickable"><a href="/metagraph/">117</a></td>
+            <td><a href="/metagraph/">117</a></td>
             <td>1,953</td>
             <td>8,849</td>
-            <td>41,543</td>
-            <td>62,740</td>
+            <td>29,069</td>
+            <td>62,741</td>
             <td>2,620</td>
             <td>46,456</td>
             <td>222,398</td>
-            <td>710,645</td>
-            <td>1,130,598</td>
+            <td>710,622</td>
+            <td>1,130,612</td>
           </tr>
           <tr>
             <th>4x4 &rarr; 8</th>
             <td>36</td>
-            <td>34,524</td>
-            <td>153,129</td>
-            <td>251,236</td>
+            <td>34,444</td>
+            <td>153,094</td>
+            <td>251,230</td>
             <td>340,198</td>
             <td>280</td>
-            <td>568,539</td>
-            <td>2,629,300</td>
-            <td>4,262,934</td>
+            <td>567,725</td>
+            <td>2,629,081</td>
+            <td>4,262,917</td>
             <td>5,362,109</td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <th>5x5 &rarr; 5</th>
-            <td class="clickable"><a href="/metagraph/5x5.html">4,006</a></td>
-            <td>193,152</td>
-            <td>1,473,580</td>
-            <td>6,201,654</td>
+            <td><a href="/metagraph/5x5.html">4,006</a></td>
+            <td>193,128</td>
+            <td>147,250</td>
+            <td>6,194,822</td>
             <td class="unknown">?</td>
             <td>1,397,790</td>
             <td class="unknown">?</td>
@@ -146,10 +147,10 @@
           <tr>
             <th>6x6 &rarr; 2</th>
             <td>80,518</td>
-            <td class="unknown">?</td>
-            <td class="unknown">?</td>
-            <td class="unknown">?</td>
-            <td class="unknown">?</td>
+            <td>241,218</td>
+            <td>400,474</td>
+            <td>557,031</td>
+            <td>1,123,743</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
@@ -197,7 +198,7 @@
           </tr>
           <tr>
             <th>6x6 &rarr; 9</th>
-            <td>128,939</td>
+            <td>178,939</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
@@ -238,7 +239,7 @@
         <tbody>
           <tr>
             <th>7x7 &rarr; 7</th>
-            <td class="clickable"><a href="/metagraph/7x7.html">158,753,814</a></td>
+            <td class="unknown"><a href="/metagraph/7x7.html">?</a></td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
@@ -253,7 +254,7 @@
         <tbody>
           <tr>
             <th>8x8 &rarr; 8</th>
-            <td>187,497,290,034</td>
+            <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
@@ -268,7 +269,7 @@
         <tbody>
           <tr>
             <th>9x9 &rarr; 9</th>
-            <td>706,152,947,468,301</td>
+            <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
             <td class="unknown">?</td>
