Restructure static directory

--- a/resources.html
+++ b/resources.html
@@ -81,7 +81,7 @@ order: 3
     <a href="/metagraph/">
       <h2>Welcome to Gridlandia!</h2>
       <summary>An interactive introduction to the math of redistricting.</summary>
-      <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
+      <img src="/static/images/gridlandia.svg" alt="Metagraph of a 4x4 grid">
     </a>
   </article>
 </div>
