--- a/who.html
+++ b/who.html
@@ -7,21 +7,21 @@ order: 2
 <article>
   <h1>Who We Are</h1>
   <dl class="bio-list">
-    <dt><img src="static/buck.png" alt="A photo of Ruth Buck"></dt>
+    <dt><img src="/static/images/buck.png" alt="A photo of Ruth Buck"></dt>
     <dd><strong>Ruth Buck</strong> is a recent graduate of Macalester College, where she studied
       geography and
       data science. She works part-time for MGGG with a focus on GIS (geographic information
       systems), cartography,
       and political and demographic data.</dd>
 
-    <dt><img src="static/deford2-square.jpg" alt="A photo of Daryl DeFord"></dt>
+    <dt><img src="/static/images/deford2-square.jpg" alt="A photo of Daryl DeFord"></dt>
     <dd><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the
       group,
       with research interests in complex networks and the mathematics of social data. He
       completed his Ph.D. in
       Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.</dd>
 
-    <dt><img src="static/duchin.jpg" alt="A photo of Moon Duchin"></dt>
+    <dt><img src="/static/images/duchin.jpg" alt="A photo of Moon Duchin"></dt>
     <dd><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong> founded MGGG in
       2016 to focus
       mathematical attention on redistricting.
@@ -32,14 +32,14 @@ order: 2
       <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.
     </dd>
 
-    <dt><img src="static/hully.png" alt="A photo of Max Hully"></dt>
+    <dt><img src="/static/images/hully.png" alt="A photo of Max Hully"></dt>
     <dd><strong>Max Hully</strong> is the software developer for MGGG, building open-source tools
       and web resources
       to make understanding redistricting accessible to everyone. He is on leave from doctoral
       work in discrete
       geometry and algebraic combinatorics at UMass Amherst.</dd>
 
-    <dt><img src="static/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
+    <dt><img src="/static/images/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
     <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is
       the program manager
       for MGGG, managing the group's research, civic, and fundraising initiatives. Prior to
@@ -49,7 +49,7 @@ order: 2
       interests in voting theory and social & political philosophy.
     </dd>
 
-    <dt><img src="static/nieh.jpg" alt="A photo of Ari Nieh"></dt>
+    <dt><img src="/static/images/nieh.jpg" alt="A photo of Ari Nieh"></dt>
     <dd><strong>Ari Nieh</strong> was a founding member of MGGG in 2016, specializing in
       mathematics
       pedagogy and communication. He developed and presented materials on gerrymandering and
@@ -58,7 +58,7 @@ order: 2
       tentatively called
       Political Geometry.</dd>
 
-    <dt><img src="static/solomon.jpg" alt="A photo of Justin Solomon"></dt>
+    <dt><img src="/static/images/solomon.jpg" alt="A photo of Justin Solomon"></dt>
     <dd><strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads
       the
       Geometric Data Processing Group in the MIT Computer Science and Artificial Intelligence
