Add map image to homepage

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: home
 title: About MGGG
 nav: true
 order: 1
+customlink: /#about-mggg
 ---
-<main class="home">
+<main>
   <div class="two-column">
     <article>
+      <h1>About MGGG</h1>
       <p>
         The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based
         working
@@ -34,7 +36,7 @@ order: 1
     <div>
       <article class="feature">
         <a href="/metagraph/">
-          <h2>Welcome to Gridlandia!</h2>
+          <h2 class="feature__title">Welcome to Gridlandia!</h2>
           <summary>An interactive introduction to the math of redistricting.</summary>
           <img src="/static/images/gridlandia.svg" alt="Metagraph of a 4x4 grid">
         </a>
