--- a/resources.html
+++ b/resources.html
@@ -79,7 +79,7 @@ order: 3
 <div>
   <article class="feature">
     <a href="/metagraph/">
-      <h2>Welcome to Gridlandia!</h2>
+      <h2 class="feature__title">Welcome to Gridlandia!</h2>
       <summary>An interactive introduction to the math of redistricting.</summary>
       <img src="/static/images/gridlandia.svg" alt="Metagraph of a 4x4 grid">
     </a>
