--- a/who.html
+++ b/who.html
@@ -68,5 +68,12 @@ order: 2
       applications. He joined MGGG's leadership in 2017 and is directing theoretical research and
       implementation
       for algorithmic approaches to generating and analyzing districting plans.</dd>
+
+    <dt><img src="/static/images/walch.jpg" alt="A photo of Olivia Walch"></dt>
+    <dd><strong><a href="http://oliviawalch.com">Olivia Walch</a></strong> is a postdoc at the
+      University of Michigan. Her research interests include mobile app development and the
+      mathematics of sleep, image processing, and redistricting. Apps developed by her half been
+      downloaded close to half a million times. She's also a cartoonist and has made multiple
+      educational comics about math-related topics.</dd>
   </dl>
 </article>
