--- a/who.html
+++ b/who.html
@@ -79,7 +79,7 @@ order: 2
     <dd><strong>Mira Bernstein</strong> is an educator and data scientist who helped launch MGGG
       in 2016. She was the lead on the Educator Training sessions
       that took place around the country as part of our regional workshop cycle, and she 
-      designed a gerrymandering-related course for Math for America.  She was one of the 
+      designed a related gerrymandering course for Math for America.  She was one of the 
     authors of MGGG's white paper on voting systems in Santa Clara.</dd>
     
         <dt><img src="/static/images/nieh.jpg" alt="A photo of Ari Nieh"></dt>
@@ -89,7 +89,7 @@ order: 2
       geometry at our Educator
       Training sessions around the country in 2017-18. He is a co-editor on the MGGG book project
       tentatively called
-      Political Geometry.</dd>
+      <i>Political Geometry</i>.</dd>
     
         <dt></dt>
     <dd><strong>Michael Sarahan</strong> is a software developer in Austin, TX.  He helps MGGG
@@ -101,7 +101,8 @@ order: 2
       University of Michigan. Her research interests include mobile app development and the
       mathematics of sleep, image processing, and redistricting. Apps developed by her have been
       downloaded close to half a million times. She’s also a cartoonist and has made multiple
-      educational comics about math-related topics.
+      educational comics about math-related topics.  Her art will appear in MGGG's edited volume,
+      <i>Political Geometry</i>.
     </dd>
   </dl>
 </article>
