--- a/who.html
+++ b/who.html
@@ -10,7 +10,10 @@ order: 2
     a larger group of active contributors who are working with us on various projects, several hundred people who attended our
     cycle of training sessions around the country in 2017-18, and 1932 people from a range of technical backgrounds
     who had filled our our Skills and Interests Inventory (as of Oct 1, 2018) 
-    to be part of our global network of collaborators on call.   </p>
+    to be part of our global network of collaborators on call.   This represents a very wide range of talent,
+  from statistics to critical race theory to mobile app development.  If your organization needs 
+  technical expertise in the voting rights sphere, please reach out to us for contacts and support
+    at <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail</a>.</p>
   
   <h2>Local Team</h2>
   <dl class="bio-list">
