--- a/who.html
+++ b/who.html
@@ -6,10 +6,12 @@ order: 2
 ---
 <article>
   <h1>Who We Are</h1>
-  <p>MGGG is made up of concentric rings of participation.  We have a core group working in the Boston area, 
-    a larger group of active contributors who are working with us on various projects, several hundred people who attended our
-    cycle of training sessions around the country in 2017-18, and 1932 people from a range of technical backgrounds
-    who had filled our our Skills and Interests Inventory (as of Oct 1, 2018) 
+  <p>As an organization, MGGG operates on multiple scales.  We have a core group  in the Boston area, 
+    a larger group of active contributors working with us on various projects, several hundred people who attended our
+    cycle of training sessions around the country in 2017-18, including dozens who are preparing to serve as expert witnesses
+    and consultants.
+    At the largest level of zoom,  1,932 people from a range of technical backgrounds
+     had filled our our <a href="https://goo.gl/forms/kHmDliQ9o7BMxx6W2">Skills and Interests Inventory</a> as of Oct 1, 2018
     to be part of our global network of collaborators on call.   This represents a very wide range of talent,
   from statistics to critical race theory to mobile app development.  If your organization needs 
   technical expertise in the voting rights sphere, please reach out to us for contacts and support
@@ -20,9 +22,8 @@ order: 2
     <dt><img src="/static/images/buck.png" alt="A photo of Ruth Buck"></dt>
     <dd><strong>Ruth Buck</strong> is a recent graduate of Macalester College, where she studied
       geography and
-      data science. She works part-time for MGGG with a focus on GIS (geographic information
-      systems), cartography,
-      and political and demographic data.</dd>
+      data science. Her work for MGGG focuses on GIS (geographic information
+      systems), cartography, and political and demographic data.</dd>
 
     <dt><img src="/static/images/deford2-square.jpg" alt="A photo of Daryl DeFord"></dt>
     <dd><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the
