--- a/who.html
+++ b/who.html
@@ -7,11 +7,11 @@ order: 2
 <article>
   <h1>Who We Are</h1>
   <p>As an organization, MGGG operates on multiple scales.  We have a core group  in the Boston area, 
-    a larger group of active contributors working with us on various projects, several hundred people who attended our
+    a larger group of active contributors working with us on various projects, and several hundred people who attended our
     cycle of training sessions around the country in 2017-18, including dozens who are preparing to serve as expert witnesses
     and consultants.
-    At the largest level of zoom,  1,932 people from a range of technical backgrounds
-     had filled our our <a href="https://goo.gl/forms/kHmDliQ9o7BMxx6W2">Skills and Interests Inventory</a> as of Oct 1, 2018
+    At the largest level of zoom,  1,932 people from a range of specialized backgrounds
+     had filled out our <a href="https://goo.gl/forms/kHmDliQ9o7BMxx6W2">Skills and Interests Inventory</a> as of Oct 1, 2018
     to be part of our global network of collaborators on call.   This represents a very wide range of talent,
   from statistics to critical race theory to mobile app development.  If your organization needs 
   technical expertise in the voting rights sphere, please reach out to us for contacts and support
@@ -76,7 +76,7 @@ order: 2
     </dd>
   </dl>
       
-      <h2>Remote and Emeritus</h2>
+      <h2>Key Collaborators, Past and Present</h2>
   <dl class="bio-list">
     
         <dt></dt>
