--- a/who.html
+++ b/who.html
@@ -81,7 +81,7 @@ order: 2
     
         <dt></dt>
     <dd><strong>Mira Bernstein</strong> is an educator and data scientist who helped launch MGGG
-      in 2016. She was the lead on the Educator Training sessions
+      and was an active member in 2016-17. She was the lead on the Educator Training sessions
       that took place around the country as part of our regional workshop cycle, and she 
       designed a related gerrymandering course for Math for America.  She was one of the 
     authors of MGGG's white paper on voting systems in Santa Clara.</dd>
