--- a/who.html
+++ b/who.html
@@ -104,8 +104,8 @@ order: 2
     <dd><strong><a href="http://oliviawalch.com">Olivia Walch</a></strong> is a postdoc at the
       University of Michigan. Her research interests include mobile app development and the
       mathematics of sleep, image processing, and redistricting. Apps developed by her have been
-      downloaded close to half a million times. She’s also a cartoonist and has made multiple
-      educational comics about math-related topics.  Her art will appear in MGGG's edited volume,
+      downloaded close to half a million times. She’s also a <a href="https://thenib.com/changing-the-math-on-gerrymandering?id=olivia-walch&t=author">cartoonist</a> and 
+      her art will appear in MGGG's edited volume,
       <i>Political Geometry</i>.
     </dd>
   </dl>
