--- a/who.html
+++ b/who.html
@@ -9,8 +9,8 @@ order: 2
   <p>As an organization, MGGG operates on multiple scales.  We have a core group  in the Boston area, 
     a larger group of active contributors working with us on various projects, and several hundred people who attended our
     cycle of training sessions around the country in 2017-18, including dozens who are preparing to serve as expert witnesses
-    and consultants.
-    At the largest level of zoom,  1,932 people from a range of specialized backgrounds
+    and consultants.</p>
+    <p>At the largest level of zoom,  1,932 people from a range of specialized backgrounds
      had filled out our <a href="https://goo.gl/forms/kHmDliQ9o7BMxx6W2">Skills and Interests Inventory</a> as of Oct 1, 2018
     to be part of our global network of collaborators on call.   This represents a very wide range of talent,
   from statistics to critical race theory to mobile app development.  If your organization needs 
