--- a/resources.html
+++ b/resources.html
@@ -70,17 +70,19 @@ order: 3
   </ul>
   
   
-  <h2>Miscellaneous and wider reading</h2>  
+  <h2>Outside reading by friends of MGGG</h2>  
 <ul>
     
     <li>MGGG consulted on <a href="https://docs.google.com/viewerng/viewer?url=http://www.campaignlegalcenter.org/sites/default/files/16-1161bsacLander.pdf"
         target="_blank">Eric Lander’s amicus brief</a> for Gill v Whitford</li>
     
-    <li><a href="https://arxiv.org/pdf/1709.01596.pdf" target="_blank">Evaluating Partisan
-        Gerrymandering
-        in Wisconsin</a>,
-      report by Greg Herschlag, Robert Ravier, and Jonathan Mattingly</li>
-
+    <li>The Duke gerrymandering team led by Jonathan Mattingly has several resources available.
+      <ul>
+        <li><a href="https://sites.duke.edu/quantifyinggerrymandering/" target="_blank">Team website</a>;
+        <li><a href="https://arxiv.org/pdf/1801.03783.pdf" target="_blank">North Carolina analysis</a>;
+          <li><a href="https://arxiv.org/pdf/1709.01596.pdf" target="_blank">Wisconsin analysis</a>.
+     </li>
+      </ul>
     <li><a href="http://www.ams.org/publications/journals/notices/201801/rnoti-p37.pdf" target="_blank">Can
         Math Help
         the Supreme Court Free Congress from Gerrymanders?</a>, Karen Saxe, <em>Notices of the
