--- a/resources.html
+++ b/resources.html
@@ -72,7 +72,10 @@ order: 3
   
   <h2>Outside reading by friends of MGGG</h2>  
 <ul>
-    
+        <li><a href="http://redistricting.lls.edu/index.php" target="_blank">All About Redistricting</a>,
+the excellent website of redistricting law scholar Justin Levitt.  The best place to read about what rules are in place 
+      in what places aroudn the country.  (In the process of a reboot.)</li>
+  
     <li>MGGG consulted on <a href="https://docs.google.com/viewerng/viewer?url=http://www.campaignlegalcenter.org/sites/default/files/16-1161bsacLander.pdf"
         target="_blank">Eric Lander’s amicus brief</a> for Gill v Whitford</li>
     
@@ -89,15 +92,8 @@ order: 3
         American
         Mathematical Society</em>, Jan 2018</li>
 
-  </ul>
-  
-  
-  <h2>General resources</h2>
-  <ul>
-    <li><a href="http://redistricting.lls.edu/index.php" target="_blank">More in-depth coverage</a>
-      at
-      Justin Levitt’s
-      excellent site AllAboutRedistricting. (In the process of a reboot.)</li>
+
+
     <li><span style="line-height: 1.5">The ACLU’s pamphlet </span><a style="line-height: 1.5" href="https://www.aclu.org/sites/default/files/field_document/2010_REDISTRICTING_GUIDE_web_0.pdf"
         target="_blank">Everything You Always Wanted to Know about Redistricting (But Were Afraid
         to
