--- a/resources.html
+++ b/resources.html
@@ -74,26 +74,21 @@ order: 3
 <ul>
         <li><a href="http://redistricting.lls.edu/index.php" target="_blank">All About Redistricting</a>,
 the excellent website of redistricting law scholar Justin Levitt.  The best place to read about what rules are in place 
-      in what places aroudn the country.  (In the process of a reboot.)</li>
+      in what places around the country.  (In the process of a reboot.)</li>
   
     <li>MGGG consulted on <a href="https://docs.google.com/viewerng/viewer?url=http://www.campaignlegalcenter.org/sites/default/files/16-1161bsacLander.pdf"
         target="_blank">Eric Lander’s amicus brief</a> for Gill v Whitford</li>
     
-    <li>The Duke gerrymandering team led by Jonathan Mattingly has several resources available.
+    <li>The <a href="https://sites.duke.edu/quantifyinggerrymandering/" target="_blank">Duke gerrymandering team</a> 
+      led by Jonathan Mattingly has several resources available that highlight their MCMC approach.
       <ul>
-        <li><a href="https://sites.duke.edu/quantifyinggerrymandering/" target="_blank">Team website</a>;
         <li><a href="https://arxiv.org/pdf/1801.03783.pdf" target="_blank">North Carolina analysis</a>;
           <li><a href="https://arxiv.org/pdf/1709.01596.pdf" target="_blank">Wisconsin analysis</a>.
      </li>
       </ul>
     <li><a href="http://www.ams.org/publications/journals/notices/201801/rnoti-p37.pdf" target="_blank">Can
-        Math Help
-        the Supreme Court Free Congress from Gerrymanders?</a>, Karen Saxe, <em>Notices of the
-        American
-        Mathematical Society</em>, Jan 2018</li>
-
-
-
+        Math Help the Supreme Court Free Congress from Gerrymanders?</a>, Karen Saxe, <em>Notices of the
+        American Mathematical Society</em>, Jan 2018</li>
     <li><span style="line-height: 1.5">The ACLU’s pamphlet </span><a style="line-height: 1.5" href="https://www.aclu.org/sites/default/files/field_document/2010_REDISTRICTING_GUIDE_web_0.pdf"
         target="_blank">Everything You Always Wanted to Know about Redistricting (But Were Afraid
         to
@@ -101,9 +96,6 @@ the excellent website of redistricting law scholar Justin Levitt.  The best plac
         learn
         about some of the basic terms
         and notions.</span></li>
-    <li>The Washington Post has a cool <a href="http://www.washingtonpost.com/wp-srv/special/politics/gerrymandering/"
-        target="_blank">interactive feature with compactness scores</a> for all US Congressional
-      Districts.  (It relies on Polsby-Popper scores, so your mileage may vary.)</li>
     <li>The geospatial application company Azavea has published a white paper on <a href="https://cdn.azavea.com/com.redistrictingthenation/pdfs/Redistricting_The_Nation_White_Paper_2010.pdf">redistricting</a>.
       (A good general introduction to different compactness measures but slightly mathematically
       buggy.)</li>
