--- a/resources.html
+++ b/resources.html
@@ -65,6 +65,16 @@ At VRDI, we made user-friendly shiny apps for carrying out Ecological Inference 
 
   </ul>
   
+  <h2>Data and software repositories</h2>
+  <ul>
+    <li><a href="https://github.com/mggg/ohio-precincts" target="_blank">Ohio precinct shapefile</a> &mdash; we contacted all 88 counties in Ohio and collected information about 
+      the locations of voting precincts, then digitized them and produced a publicly available shapefile, the first for that 
+      state.
+    </li>
+    <li><a href="https://github.com/mggg/DiscreteCompactness" target="_blank">Discrete compactness</a> hosts a collection
+      of data and code to study the relationships between different ideas for graph-based compactness scores
+    </li>
+  </ul>
   
   <h2>Outside reading by friends of MGGG</h2>  
 <ul>
