--- a/resources.html
+++ b/resources.html
@@ -76,7 +76,7 @@ At VRDI, we made user-friendly shiny apps for carrying out Ecological Inference 
     </li>
   </ul>
   
-  <h2>Outside reading by friends of MGGG</h2>  
+  <h2>Related work by friends of MGGG</h2>  
 <ul>
         <li><a href="http://redistricting.lls.edu/index.php" target="_blank">All About Redistricting</a>,
 the excellent website of redistricting law scholar Justin Levitt.  The best place to read about what rules are in place 
@@ -84,6 +84,10 @@ the excellent website of redistricting law scholar Justin Levitt.  The best plac
   
     <li>MGGG consulted on <a href="https://docs.google.com/viewerng/viewer?url=http://www.campaignlegalcenter.org/sites/default/files/16-1161bsacLander.pdf"
         target="_blank">Eric Lander’s amicus brief</a> for Gill v Whitford</li>
+  
+  <li>The CMU/Pitt gerrymandering team has <a href="https://arxiv.org/pdf/1608.02014.pdf" target="_blank">an article</a> providing methods for drawing rigorous statistical conclusions from 
+    random walks (published in PNAS).  They provide code in a 
+    <a href="https://www.math.cmu.edu/~wes/files/markovchain.tgz">public repository</a>.</li>
     
     <li>The <a href="https://sites.duke.edu/quantifyinggerrymandering/" target="_blank">Duke gerrymandering team</a> 
       led by Jonathan Mattingly has several resources available that highlight their MCMC approach.
