--- a/resources.html
+++ b/resources.html
@@ -39,15 +39,13 @@ order: 3
   <h2>Tools and interactives</h2>
   <ul>
     <li><a href="./metagraph/">Gridlandia</a>, an overview of the combinatorics of redistricting and the principles of MCMC.</li>
-    <li>An excellent interactive introduction to <a href="http://tinyurl.com/gerryEI" target="_blank">Ecological
-        Inference</a>, a tool for measuring racially polarized voting—made at our Boston
-      hackathon by Rosemary Fasselin, Sarah Hugenberger, and Doug Spencer.  
-At VRDI, we made user-friendly shiny apps for carrying out Ecological Inference estimates for 
-    assessing racially polarized voting:  
+    <li><a href="https://github.com/gerrymandr/RunDMCMC" target="_blank">GerryChain</a>, our open-source python-based tool 
+      for MCMC on districting plans.  A user guide is in development.</li>
+    <li>Ecological inference (EI) is the main statistical technique used to establish racially polarized voting (RPV).
       <ul>
-    <li><a href="https://vrdi.shinyapps.io/ei-app/">2x2</a>  tool, for two racial groups and two candidates;</li>
-    <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/">RxC</a> tool, for more groups and candidates.</li></ul></li>
-
+        <li><a href="http://tinyurl.com/gerryEI" target="_blank">Interactive introduction to EI</a></li>
+    <li><a href="https://vrdi.shinyapps.io/ei-app/" target="_blank">2x2</a>  tool, for two racial groups and two candidates;</li>
+    <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/" target="_blank">RxC</a> tool, for more groups and candidates.</li></ul></li>
   </ul>
   
   <h2>Technical research</h2>
