--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@ order: 3
   
   <h2>Technical research</h2>
   <ul>
-    <li>M.Duchin and B.Tenner, <a href=""><i>Discrete geometry for electoral geography</i></a>, preprint.
+    <li>M.Duchin and B.Tenner, <a href="https://arxiv.org/abs/1808.05860"><i>Discrete geometry for electoral geography</i></a>, preprint.
     An overview of problems with "compactness" and a call for research on discrete scores.</li>
     <li>D.DeFord, H.Lavenant, Z.Schutzman, and J.Solomon, <a href="https://arxiv.org/pdf/1809.07943.pdf"><i>Total 
       variation isoperimetric profiles</i></a>, preprint.
