--- a/resources.html
+++ b/resources.html
@@ -53,14 +53,14 @@ order: 3
   
   <h2>Technical research</h2>
   <ul>
-    <li>M.Duchin and B.Tenner, <a href="https://arxiv.org/abs/1808.05860"><i>Discrete geometry for electoral geography</i></a>, preprint.
+    <li>M.Duchin and B.Tenner, <a href="https://arxiv.org/abs/1808.05860" target="_blank"><i>Discrete geometry for electoral geography</i></a>, preprint.
     An overview of problems with "compactness" and a call for research on discrete scores.</li>
-    <li>D.DeFord, H.Lavenant, Z.Schutzman, and J.Solomon, <a href="https://arxiv.org/pdf/1809.07943.pdf"><i>Total 
+    <li>D.DeFord, H.Lavenant, Z.Schutzman, and J.Solomon, <a href="https://arxiv.org/pdf/1809.07943.pdf" target="_blank"><i>Total 
       variation isoperimetric profiles</i></a>, preprint.
       An investigation of multi-scale compactness scores.</li>
-    <li>R.Barnes and J.Solomon, <a href="https://arxiv.org/pdf/1803.02857.pdf"><i>Gerrymandering and compactness:
+    <li>R.Barnes and J.Solomon, <a href="https://arxiv.org/pdf/1803.02857.pdf" target="_blank"><i>Gerrymandering and compactness:
       Implementation flexibility and abuse</i></a>, preprint.  Sensitivity analysis of compactness scores.
-    <li>A.Bar-Natan, M.Duchin, and R.Kropholler, <a href="https://arxiv.org/pdf/1712.02484.pdf"><i>Medium-scale curvature
+    <li>A.Bar-Natan, M.Duchin, and R.Kropholler, <a href="https://arxiv.org/pdf/1712.02484.pdf" target="_blank"><i>Medium-scale curvature
       for Cayley graphs</i></a>, preprint.  A pure math riff on an idea for gerrymandering:  can we use Ricci 
     curvature to detect natural clusters in the dual graphs of states and other jurisdictions?</li>
 
