--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@ nav: true
 order: 3
 ---
 <article>
-  <h1>MGGG Resources on Gerrymandering</h1>
+  <h1>Things we wrote and things we made</h1>
 
   <h2>Survey articles</h2>
 <ul>
