Change page names / nav structure

--- a/donate.html
+++ b/donate.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Donate
+title: Support
 nav: true
 order: 4
 ---
 <article>
-  <h1>Donate</h1>
+  <h1>Support</h1>
   <p>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
     multidisciplinary work
     on geometric aspects of redistricting.</p>
