--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: home
-title: About MGGG
+title: Mission
 nav: true
 order: 1
 customlink: /#about-mggg
 ---
 <main>
   <article>
-    <h1>About MGGG</h1>
+    <h1>Our Mission</h1>
     <p>
       The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based
       working
