--- a/who.html
+++ b/who.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Who We Are
+title: Team
 nav: true
 order: 2
 ---
 <article>
-  <h1>Who We Are</h1>
+  <h1>Team</h1>
   <p>As an organization, MGGG operates on multiple scales. We have a core group in the Boston area,
     a larger group of active contributors working with us on various projects, and several hundred
     people who attended our
