--- a/resources.html
+++ b/resources.html
@@ -13,8 +13,10 @@ order: 3
       <li><a href="https://arxiv.org/pdf/1801.02064.pdf" target="_blank">Gerrymandering metrics:
           How to
           measure? What’s
-          the baseline?</a>, Moon Duchin, remarks from <a href="https://www.amacad.org/content/events/eventOverview.aspx?v=1&amp;e=10378"
-          target="_blank">AAAS</a></li>
+          the baseline?</a>, Moon Duchin, Bulletin of the American Academy for Arts and Sciences, Vol. LXII, No. 2 (Winter 2018), 54-58.
+        (see related
+        <a href="https://www.amacad.org/content/events/eventOverview.aspx?v=1&amp;e=10378"
+          target="_blank">video</a>)</li>
       <li><a href="http://www.ams.org/publications/journals/notices/201709/rnoti-p1020.pdf" target="_blank">A
           Formula
           Goes to Court: Partisan Gerrymandering and the Efficiency Gap</a>, Mira Bernstein and
