--- a/resources.html
+++ b/resources.html
@@ -8,27 +8,21 @@ order: 3
   <article>
     <h1>Our Work</h1>
 
-    <h2>Survey articles</h2>
+    <h2>Surveys and non-specialist articles</h2>
     <ul>
       <li><a href="https://arxiv.org/pdf/1801.02064.pdf" target="_blank">Gerrymandering metrics:
-          How to
-          measure? What’s
-          the baseline?</a>, Moon Duchin, Bulletin of the American Academy for Arts and Sciences, Vol. LXII, No. 2 (Winter 2018), 54-58.
-        (see related
-        <a href="https://www.amacad.org/content/events/eventOverview.aspx?v=1&amp;e=10378"
+          How to measure? What’s
+          the baseline?</a>, Moon Duchin, Bulletin of the American Academy for Arts and Sciences, Winter 2018.
+        (<a href="https://www.amacad.org/content/events/eventOverview.aspx?v=1&amp;e=10378"
           target="_blank">video</a>)</li>
       <li><a href="http://www.ams.org/publications/journals/notices/201709/rnoti-p1020.pdf" target="_blank">A
-          Formula
-          Goes to Court: Partisan Gerrymandering and the Efficiency Gap</a>, Mira Bernstein and
-        Moon
-        Duchin, <em>Notices
-          of the American Mathematical Society</em>, Oct 2017</li>
+          Formula Goes to Court: Partisan Gerrymandering and the Efficiency Gap</a>, Mira Bernstein and
+        Moon Duchin, <em>Notices of the American Mathematical Society</em>, Oct 2017.</li>
       <li><a href="https://theconversation.com/rebooting-the-mathematics-behind-gerrymandering-73096"
-          target="_blank">Rebooting
-          the mathematics behind gerrymandering</a>, Moon Duchin and Peter Levine, <em>The
-          Conversation,
-        </em>Oct
-        2017</li>
+          target="_blank">Rebooting the mathematics behind gerrymandering</a>, Moon Duchin and Peter Levine, <em>The
+          Conversation, </em>Oct 2017</li>
+            <li><a href="https://www.scientificamerican.com/article/meet-the-mathematicians-fighting-against-gerrymandering/" target="_blank">Gerrymandering v. Geometry</a>, popular piece in Scientific American,
+        Nov 2018.</li>
     </ul>
 
     <h2>White papers and reports</h2>
@@ -46,7 +40,7 @@ order: 3
     <h2>Tools and interactives</h2>
     <ul>
       <li><a href="./metagraph/">Gridlandia</a>, an overview of the combinatorics of redistricting
-        and the principles of MCMC.</li>
+        and the principles of Markov chain Monte Carlo, or MCMC.</li>
       <li><a href="https://github.com/gerrymandr/RunDMCMC" target="_blank">GerryChain</a>, our
         open-source python-based tool
         for MCMC on districting plans. A user guide is in development.</li>
@@ -59,7 +53,10 @@ order: 3
           <li><a href="https://vrdi.shinyapps.io/ei-app-RxC/" target="_blank">RxC</a> tool, for
             more
             groups and candidates.</li>
-        </ul>
+        </ul></li>
+      <li><a href="https://github.com/gerrymandr/bvap-cbc-notebook" target="_blank">BVAP explorer</a>,
+        a jupyter notebook for studying the relationship between Black voting age percentage (BVAP)  
+        and patterns of current Black congressional representation.  
       </li>
     </ul>
 
