--- a/who.html
+++ b/who.html
@@ -27,8 +27,9 @@ order: 2
     <dt><img src="/static/images/angulu.jpg" alt="A photo of Hakeem Angulu"></dt>
     <dd><strong><a href="https://www.hakeemangulu.com/">Hakeem Angulu</a></strong> is a junior at
       Harvard College concentrating in Computer Science and Statistics, with a Secondary in African
-      American Studies. He is a partner with the Radcliffe Research Program at Harvard, and is
-      dedicated to building projects that amplify voices, facilitate justice, and push limits.</dd>
+      American Studies. He is dedicated to building projects that amplify voices, facilitate justice, and push limits.
+      He works with MGGG through the Radcliffe Research Program, focusing on algorithms and computer experiments.
+      </dd>
 
     <dt><img src="/static/images/buck.png" alt="A photo of Ruth Buck"></dt>
     <dd><strong>Ruth Buck</strong> is a recent graduate of Macalester College, where she studied
@@ -66,8 +67,8 @@ order: 2
       the program manager
       for MGGG, managing the group's research, civic, and fundraising initiatives. Prior to
       working for MGGG, Aidan
-      earned a PhD in Logic, Computation, and Methodology at Carnegie Mellon University and
-      maintains research
+      earned a PhD in Logic, Computation, and Methodology at Carnegie Mellon University. She
+      maintains active research
       interests in voting theory and social & political philosophy.
     </dd>
 
