--- a/table.html
+++ b/table.html
@@ -93,7 +93,7 @@
     </div>
     
     <p>
-      The generation of the numbers in this table was overseen by MGGG's Zach Schutzman and Daryl DeFord.  We used a combination of our own python code and an algorithm coded by Bob Harris (<a href="http://www.bumblebeagle.org/polyominoes/tilingcounting/">code</a>,
+      The generation of the numbers in this table was overseen by MGGG's Zach Schutzman and Daryl DeFord.  We used a combination of <a href="https://github.com/zschutzman/enumerator">our own python code</a> and an algorithm coded by Bob Harris (<a href="http://www.bumblebeagle.org/polyominoes/tilingcounting/">code</a>,
 <a href="http://www.bumblebeagle.org/polyominoes/tilingcounting/counting_9x9_tilings.pdf">writeup</a>; <a href="https://oeis.org/A172477">OEIS</a>) in C in 2010.  We've checked the math behind both algorithms and are confident in both implementations.
 
 As of October 2018, we've got runs going on MIT's <a href="https://tig.csail.mit.edu/shared-computing/open-stack/">OpenStack</a> to extend the coverage of this table.  Each missing value is expected to take at least a day, and sometimes weeks or more, of computer time. 
