--- a/table.html
+++ b/table.html
@@ -23,11 +23,12 @@
 
   <main>
     <h1>The Known Sizes of Grid Metagraphs</h1>
-    <!--
+    
     <p>
-     ...description of the table... 
+      The row marked <b>nxn &rarr; n</b> counts the number of ways to partition an $n\times n$ grid into $n$
+      districts.  
     </p
-   -->
+
     <div class="table-container">
       <table>
 
