--- a/table.html
+++ b/table.html
@@ -78,7 +78,7 @@
 </tbody>
 <tbody>
 <tr><th>6x6 &rarr; 2</th><td>80,518</td><td>241,218</td><td>400,474</td><td>557,031</td><td>1,123,743</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
-<tr><th>6x6 &rarr; 3</th><td>264,500</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
+<tr><th>6x6 &rarr; 3</th><td>264,500</td><td>1,848,872</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 <tr><th>6x6 &rarr; 4</th><td>442,791</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 <tr><th>6x6 &rarr; 6</th><td>451,206</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 <tr><th>6x6 &rarr; 9</th><td>178,939</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
@@ -89,10 +89,10 @@
 <tr><th>7x7 &rarr; 7</th><td>158,753,814</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 </tbody>
 <tbody>
-<tr><th>8x8 &rarr; 8</th><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
+<tr><th>8x8 &rarr; 8</th><td>187,497,290,034</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 </tbody>
 <tbody>
-<tr><th>9x9 &rarr; 9</th><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
+<tr><th>9x9 &rarr; 9</th><td>706,152,947,468,301</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 </tbody>
 </table>
     </div>
