--- a/table.html
+++ b/table.html
@@ -74,7 +74,7 @@
 <tr><th>4x4 &rarr; 8</th><td>36</td><td>34,444</td><td>153,094</td><td>251,230</td><td>340,198</td><td>280</td><td>567,725</td><td>2,629,081</td><td>4,262,917</td><td>5,362,109</td></tr>
 </tbody>
 <tbody>
-<tr><th>5x5 &rarr; 5</th><td>4,006</td><td>193,128</td><td>147,250</td><td>6,194,822</td><td class="unknown">?</td><td>1,397,790</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
+<tr><th>5x5 &rarr; 5</th><td>4,006</td><td>193,128</td><td>147,250</td><td>6,194,822</td><td class="unknown">?</td><td>1,397,790</td><td>70,491,206</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
 </tbody>
 <tbody>
 <tr><th>6x6 &rarr; 2</th><td>80,518</td><td>241,218</td><td>400,474</td><td>557,031</td><td>1,123,743</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td><td class="unknown">?</td></tr>
