--- a/resources.html
+++ b/resources.html
@@ -21,8 +21,9 @@ order: 3
       <li><a href="https://theconversation.com/rebooting-the-mathematics-behind-gerrymandering-73096"
           target="_blank">Rebooting the mathematics behind gerrymandering</a>, Moon Duchin and Peter Levine, <em>The
           Conversation, </em>Oct 2017.</li>
-            <li><a href="https://www.scientificamerican.com/article/meet-the-mathematicians-fighting-against-gerrymandering/" target="_blank">Gerrymandering v. Geometry</a>, popular piece in Scientific American,
-        Nov 2018.</li>
+            <li><a href="https://www.scientificamerican.com/article/meet-the-mathematicians-fighting-against-gerrymandering/" target="_blank">Gerrymandering 
+              v. Geometry</a>, popular piece in Scientific American,
+              Nov 2018.  (related <a href="./metagraph/">interactive</a> and some supporting <a href="./table.html">numerology</a>)</li>
     </ul>
 
     <h2>White papers and reports</h2>
