--- a/table.html
+++ b/table.html
@@ -25,7 +25,19 @@
     <h1>The Known Sizes of Grid Metagraphs</h1>
     
     <p>
-      The row marked <b>nxn &rarr; n</b> counts the number of ways to partition an n by  n grid into n
+      At MGGG, we think that one of the reasons that redistricting is hard to study is that the space of possibilities
+      (i.e., valid districting plans) is so huge it's unthinkable by humans.  And relatedly, the number of ways to 
+      achieve any simple objective is overwhelmingly large.
+    </p>
+    <p>
+      We think that to study districting plans in context, you need to understand the space of alternatives.  
+      So we are working on the science of sampling from these universes of districting plans.
+      As a simplified warmup problem, we can ask how many ways there would be to district a jurisdiction
+      made up of a small number of units with equal population arranged in a perfect grid.  We can then 
+      build up the complexity from there.  But this problem is already formidable!
+    </p>
+    <p>
+      In this table, the row marked <b>nxn &rarr; n</b> shows the number of ways to partition an n by  n grid into n
       districts (or connected pieces).  The columns describe how much size difference is tolerated among 
       the districts.
       The two halves of the table distinguish whether, to be considered
